--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,35 @@
     background-color: rgb(67, 250, 189);
 }
 
+input[type="range"] {
+    height: 26px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 200px;
+}
 
-/* .miles-container{
-  margin
-} */
+input[type="range"]:focus {
+    outline: none;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    width: 200px;
+    height: 9px;
+    cursor: pointer;
+    /* box-shadow: 0px 0px 0px #000000; */
+    background: #edabeb;
+    border-radius: 9px;
+    /* border: 0px solid #000101; */
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    /* box-shadow: 0px 0px 0px #000000; */
+    /* border: 0px solid #000000; */
+    height: 20px;
+    width: 25px;
+    border-radius: 3px;
+    background: #ab27ab;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -5.5px;
+}
