--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,32 @@
 .container {
+    margin-top: 30px;
+    display: flex;
+    width: 100%;
     height: 100vh;
+    justify-content: center;
+}
+
+.input {
+    /* height: 100vh; */
+    height: 700px;
+    width: 400px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    background: grey;
+    border-radius: 40px 0px 0px 40px;
+}
+
+.output {
+    height: 700px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background: lightgray;
+    border-radius: 0px 40px 40px 0px;
 }
 
 .rates-container {
