--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
 }
 
 .rate-option {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     cursor: pointer;
     width: 60px;
     height: 60px;
@@ -45,6 +45,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgb(188, 253, 231);
+    border-radius: 8px;
 }
 
 .rate-active {
@@ -56,6 +57,7 @@ input[type="range"] {
     -webkit-appearance: none;
     margin: 10px 0;
     width: 200px;
+    background-color: grey;
 }
 
 input[type="range"]:focus {
@@ -82,4 +84,13 @@ input[type="range"]::-webkit-slider-thumb {
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -5.5px;
+}
+
+.miles-container h4 {
+    width: 200px;
+    text-align: center;
+}
+
+select {
+    width: 200px;
 }
