--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,6 @@ body {
     align-items: center;
     background: rgb(163, 162, 162);
     border-radius: 32px 32px 0px 0px;
-    /* border: 8px solid black;
-    border-bottom: none; */
 }
 
 .input>div {
@@ -46,8 +44,6 @@ body {
     background: lightgray;
     border-radius: 0px 0px 32px 32px;
     flex: auto;
-    /* border: 8px solid black;
-    border-top: none; */
 }
 
 .rates-container {
@@ -173,4 +169,17 @@ td {
     background-color: black;
     color: white;
     box-shadow: 0px 0px 4px black;
+}
+
+@media (max-width: 600px) {
+    #root {
+        margin-top: 0px;
+    }
+    .input,
+    .output {
+        border-radius: 0px;
+    }
+    .input>div {
+        margin-top: 10px;
+    }
 }
