--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,12 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background: rgb(163, 162, 162);
-    border-radius: 32px 32px 0px 0px;
+    background: lightgray;
+    /* border-radius: 32px 32px 0px 0px; */
 }
 
 .input>div {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .output {
@@ -42,27 +42,27 @@ body {
     flex-direction: column;
     align-items: center;
     background: lightgray;
-    border-radius: 0px 0px 32px 32px;
+    /* border-radius: 0px 0px 32px 32px; */
     flex: auto;
 }
 
 .rates-container {
     display: flex;
-    width: 200px;
+    width: 300px;
     justify-content: space-between;
 }
 
 .rate-option {
     /* border: 1px solid black; */
     cursor: pointer;
-    width: 80px;
+    width: 120px;
     height: 80px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     border-radius: 8px;
-    background-color: rgb(230, 231, 231);
+    background-color: rgb(238, 238, 238);
     color: rgb(177, 175, 175);
 }
 
@@ -81,8 +81,9 @@ input[type="range"] {
     height: 26px;
     -webkit-appearance: none;
     margin: 10px 0;
-    width: 200px;
-    background-color: rgb(163, 162, 162);
+    width: 300px;
+    /* background-color: rgb(163, 162, 162); */
+    background: lightgray;
 }
 
 input[type="range"]:focus {
@@ -93,15 +94,11 @@ input[type="range"]::-webkit-slider-runnable-track {
     width: 200px;
     height: 6px;
     cursor: pointer;
-    /* box-shadow: 0px 0px 0px #000000; */
-    background: #ebebeb;
+    background: #ffffff;
     border-radius: 9px;
-    /* border: 0px solid #000101; */
 }
 
 input[type="range"]::-webkit-slider-thumb {
-    /* box-shadow: 0px 0px 0px #000000; */
-    /* border: 0px solid #000000; */
     height: 20px;
     width: 25px;
     border-radius: 3px;
@@ -112,13 +109,13 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .miles-container h4 {
-    width: 200px;
+    width: 300px;
     text-align: left;
     margin: 30px 0px 0px 0px;
 }
 
 select {
-    width: 200px;
+    width: 300px;
     height: 40px;
     margin-top: -8px;
 }
@@ -140,10 +137,16 @@ h4 span {
     text-align: left;
 }
 
-h1 {
-    text-align: center;
+h2 {
+    text-align: left;
     margin-bottom: 24px;
     margin-top: 30px;
+}
+
+.output-label {
+    width: 300px;
+    text-transform: uppercase;
+    margin-top: 40px;
 }
 
 table {
@@ -171,15 +174,21 @@ td {
     box-shadow: 0px 0px 4px black;
 }
 
+.hr-div {
+    background-color: lightgray;
+    width: 380px;
+    display: flex;
+    justify-content: center;
+}
+
+hr {
+    border-top: 1px solid grey;
+    margin: 0;
+    width: 340px;
+}
+
 @media (max-width: 600px) {
     #root {
         margin-top: 0px;
-    }
-    .input,
-    .output {
-        border-radius: 0px;
-    }
-    .input>div {
-        margin-top: 10px;
     }
 }
