--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
 }
 
 #root {
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 
 .container {
@@ -15,14 +15,14 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    max-height: 700px;
+    max-height: 1000px;
     justify-content: center;
     align-items: center;
 }
 
 .input {
     height: 66%;
-    width: 380px;
+    width: 800px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -37,7 +37,7 @@ body {
 
 .output {
     height: 34%;
-    width: 380px;
+    width: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -176,7 +176,7 @@ td {
 
 .hr-div {
     background-color: lightgray;
-    width: 380px;
+    width: 800px;
     display: flex;
     justify-content: center;
 }
