--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
     max-height: 1000px;
     justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
 .input {
@@ -25,7 +26,7 @@ body {
     width: 800px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     background: lightgray;
     /* border-radius: 32px 32px 0px 0px; */
@@ -40,6 +41,7 @@ body {
     width: 800px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     background: lightgray;
     /* border-radius: 0px 0px 32px 32px; */
@@ -146,7 +148,7 @@ h2 {
 .output-label {
     width: 300px;
     text-transform: uppercase;
-    margin-top: 40px;
+    margin-top: 0px;
 }
 
 table {
@@ -184,5 +186,5 @@ td {
 hr {
     border-top: 1px solid grey;
     margin: 0;
-    width: 340px;
+    width: 600px;
 }
