--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 body {
     margin: 0px;
     padding: 0px;
     height: 100vh;
     width: 100%;
+    font-family: "Roboto", sans-serif;
 }
 
-#root {
-    /* margin-top: 30px; */
+.header {
+    height: 60px;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    color: white;
 }
 
 .container {
     margin: 0px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     height: 100vh;
     max-height: 1000px;
@@ -22,30 +30,33 @@ body {
 }
 
 .input {
-    height: 66%;
+    height: 100%;
     width: 800px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background: lightgray;
     /* border-radius: 32px 32px 0px 0px; */
 }
 
-.input>div {
-    margin-top: 10px;
+.intro {
+    margin-top: 40px;
+    /* margin-bottom: 20px; */
+    width: 300px;
+    font-size: 18px;
 }
 
 .output {
-    height: 34%;
+    height: 100%;
     width: 800px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background: lightgray;
     /* border-radius: 0px 0px 32px 32px; */
-    flex: auto;
+    border-left: 1px solid grey;
 }
 
 .rates-container {
@@ -123,7 +134,7 @@ select {
 }
 
 h4 span {
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .hours-label {
@@ -148,7 +159,7 @@ h2 {
 .output-label {
     width: 300px;
     text-transform: uppercase;
-    margin-top: 0px;
+    margin-top: 60px;
 }
 
 table {
