fixing chart to absolute scale + add saving in $ amount to inform user

--- a/src/index.css
+++ b/src/index.css
@@ -235,3 +235,8 @@ select:focus {
     margin-right: 10px;
     background-color: #faba45;
 }
+
+.output-label span {
+    color: green;
+    font-size: 28px;
+}
