--- a/src/index.css
+++ b/src/index.css
@@ -28,13 +28,14 @@ body {
     width: 100%;
     height: 100vh;
     max-height: 1000px;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     background: var(--bg);
 }
 
 .input {
     height: 100%;
+    width: 450px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -42,14 +43,19 @@ body {
     background: var(--bg);
 }
 
+.input>div {
+    margin-top: 30px;
+}
+
 .intro {
-    margin-top: 40px;
+    margin-top: 40px !important;
     width: 300px;
     font-size: 18px;
 }
 
 .output {
     height: 100%;
+    width: 450px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
